tests/rosetta/transpiler/Clojure/chaocipher.error
run error: exit status 1
Execution error (ClassCastException) at main/chao (chaocipher.clj:30).
class java.lang.String cannot be cast to class clojure.lang.IPersistentVector (java.lang.String is in module java.base of loader 'bootstrap'; clojure.lang.IPersistentVector is in unnamed module of loader 'app')

Full report at:
/tmp/clojure-12872880225427168197.edn
